<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="Deskval" Id="{fed4d71e-8e57-4b64-ad17-b29ea09b2dc8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	(*
	─────────────────────────────────────────────────────────────────────────────────────────────
	CAUTION:
	─────────────────────────────────────────────────────────────────────────────────────────────
		Deskval Workbench is preconfigured to work with this Global Variable List 
		Do not change neither name of this Global Variable List nor its content in any way.		 
	───────────────────────────────────────────────────────────────────────────────────────────── 
	*)
	
	AdsTagsFromDeskval_Boolean 	:	ARRAY[0..127] OF BOOL;			// Written by Deskval Workbench.
	AdsTagsFromDeskval_Double 	:	ARRAY[0..63] OF LREAL;			// Written by Deskval Workbench.
	AdsTagsFromDeskval_String 	:	ARRAY[0..31] OF STRING(255);	// Written by Deskval Workbench.
	AdsTagsToDeskval_Boolean 	:	ARRAY[0..127] OF BOOL;			// Read by Deskval Workbench.
	AdsTagsToDeskval_Double 	:	ARRAY[0..63] OF LREAL;			// Read by Deskval Workbench.
	AdsTagsToDeskval_String 	:	ARRAY[0..31] OF STRING(255);	// Read by Deskval Workbench.
	BatchTags 					:	ARRAY[0..31] OF STRING(255);	// Read/Write by Deskval Workbench.
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>