<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MAIN" Id="{b0d9c06b-cc2b-4257-a6db-fed8bdb41f30}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	myTimer					: TON;
	randomNumberGenerator	: DRAND();
	randomNumber			: LREAL;
	count					: WORD;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
	■ What is exchanged between Twincat Plc and Deskval Workbench ?  							
						Deskval Workbech exchanges its built-in AdsTags in a directional manner. 
						Deskval Workbench exchanges its built-in BatchTags, in a Readonly manner.	
	■ What is required in the Plc project ?
			Twincat Plc Project should have a Global Variable List, named as Deskval with a specific content. It is provided in this project.
					
						
	■ AdsTags				┌───────────────────────────────────────────────────────────────┐		┌───────────────────────────┐
							│ 						Twincat Plc Project         			│		│ 	  Deskval Workbench 	│    
							├───────────────────────────────────────────────────────────────┤		├───────────────────────────┤
							│															 	│		│         Ads Tags   		│     
							│															 	│		│							│                    
			┌────────────── │ 	AdsTagsFromDeskval_Boolean		AdsTagsToDeskval_Boolean	│ ────	► 128 Boolean	128 Boolean ►  ──────────────┐
			│	┌────────── │ 	AdsTagsFromDeskval_Double		AdsTagsToDeskval_Double		│ ────	► 64 Double		64 Double  	►  ──────────┐	 │
			│	│	┌──────	│ 	AdsTagsFromDeskval_String		AdsTagsToDeskval_String		│ ────	► 32 String    	32 String	►  ──────┐	 │	 │
			│	│	│		└───────────────────────────────────────────────────────────────┘		└───────────────────────────┘		 │	 │	 │
			│	│	└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘	 │	 │
			│	└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘	 │
			└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘	

	■ BatchTags				┌───────────────────────────────────────────────────────────────┐		┌───────────────────────────┐
							│ 						Twincat Plc Project         			│		│ 	  Deskval Workbench* 	│    
							├───────────────────────────────────────────────────────────────┤		├───────────────────────────┤
							│															 	│		│       Batch Tags  		│     
							│							BatchTags							│ ◄───►	│		 32 String			│    
							└───────────────────────────────────────────────────────────────┘		└───────────────────────────┘			
			¹ If a Deskval BatchTag is configured to get its value from Ads, then Deskval will Read it from the Plc

	────────────────────────────────────────────────────────────────────────────────────────────────────
	Description : This is a Sample Plc Program to demonstrate Ads Communication with Deskval Workbench.
	──────────────────────────────────────────────────────────────────────────────────────────────────── *)
myTimer(IN:=TRUE, PT:=T#1S);

// On Timer Tick
IF(myTimer.Q) THEN
	
	//Get a Random Number
	randomNumberGenerator(Seed:=17, Num=>randomNumber);		
	
	// Write to First Boolean Tag
	Deskval.AdsTagsToDeskval_Boolean[0] := NOT(Deskval.AdsTagsToDeskval_Boolean[0]);
	
	// Write to Second Num Tag
	Deskval.AdsTagsToDeskval_Double[1] 	:= randomNumber*100;
	
	// Write to Third String Tag
	Deskval.AdsTagsToDeskval_String[2] 	:= CONCAT('Count ',WORD_TO_STRING(count));
	
	// Write To Fourth Batch Tag
	Deskval.BatchTags[3] 				:= CONCAT('Some Batch ',WORD_TO_STRING(count));
	
	// Reset Timer
	myTimer(IN:=FALSE);

	//Increment count
	count := count + 1;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="2" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="140" Count="2" />
      <LineId Id="37" Count="0" />
      <LineId Id="119" Count="10" />
      <LineId Id="11" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="63" Count="3" />
      <LineId Id="54" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="138" Count="1" />
      <LineId Id="76" Count="1" />
      <LineId Id="105" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="78" Count="0" />
      <LineId Id="106" Count="0" />
      <LineId Id="99" Count="1" />
      <LineId Id="94" Count="0" />
      <LineId Id="84" Count="1" />
      <LineId Id="93" Count="0" />
      <LineId Id="86" Count="1" />
      <LineId Id="95" Count="0" />
      <LineId Id="88" Count="0" />
      <LineId Id="92" Count="0" />
      <LineId Id="89" Count="0" />
      <LineId Id="101" Count="2" />
      <LineId Id="90" Count="1" />
      <LineId Id="110" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="111" Count="0" />
      <LineId Id="80" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>